Set up PG pool, query function and test adding data to table

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Your Generated Front-end</title>
+    <title>CGD - Coffee Grind Databse</title>
     <link
       rel="stylesheet"
       href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
