Add table, table styling and function to get data on page load and populate table.

--- a/public/index.html
+++ b/public/index.html
@@ -19,5 +19,17 @@
   <body>
     <h1>Coffee Grind Database</h1>
     <p>Welcome to the future of espresso 🔮</p>
+    <table id="allApiData">
+      <th>Username</th>
+      <th>Drink</th>
+      <th>Grinder</th>
+      <th>Grind Setting</th>
+      <th>Preinfusion Time (s)</th>
+      <th>Extraction Time (s)</th>
+      <th>Tasting Notes</th>
+      <th>Roaster</th>
+      <th>Bean Title</th>
+    </table>
+    <script src="./js/main.js"></script>
   </body>
 </html>
