--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,12 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
@@ -21,7 +27,15 @@
   </head>
 
   <body>
-    <h1>Coffee Grind Database</h1>
+    <div class="top">
+      <img
+        id="logo"
+        src="./images/adi-goldstein-xKS-1DP4g7A-unsplash.jpg"
+        alt="a cup of espresso"
+      />
+      <h1>Coffee Grind Database</h1>
+      <div></div>
+    </div>
     <p>Welcome to the future of espresso 🔮</p>
     <table id="allApiData">
       <th>Username</th>
