--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,11 @@
             alt="coffee grinders"
         /></a>
         <a href="#newrecipe">
-          <span class="material-icons"> add_circle_outline </span>
+          <img
+            id="newrecipe"
+            src="./images/addRecipe.svg"
+            alt="add recipe button"
+          />
         </a>
         <a href="#machines">
           <span class="material-icons-outlined"> coffee_maker </span></a
