Add links to home screen and set up additional pages

--- a/public/index.html
+++ b/public/index.html
@@ -48,20 +48,34 @@
       <th>Roaster</th>
       <th>Bean Title</th>
     </table>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat delectus
-      facere iure odio nihil iusto fuga eligendi asperiores, assumenda
-      voluptates pariatur ea! Soluta, tempora sed incidunt inventore tempore
-      itaque nesciunt sunt? Numquam ipsam sequi quis magni similique? Culpa iure
-      itaque cumque adipisci repudiandae. Pariatur possimus hic quod accusantium
-      dignissimos ut aut beatae neque repellendus, corrupti ex, facere quo qui
-    </p>
+    <div class="links">
+      <div>
+        <a href="#grinders">
+          <h2>Grinders</h2>
+          <img src="./images/grinders.jpg" alt="coffee grinder" />
+        </a>
+        <a href="#newrecipe">
+          <h2>New Recipe</h2>
+          <img src="./images/menu.jpg" alt="coffee menu" />
+        </a>
+      </div>
+      <div>
+        <a href="#machines">
+          <h2>Machines</h2>
+          <img src="./images/machines.jpg" alt="espresso machine" />
+        </a>
+        <a href="#roasters">
+          <h2>Roasters</h2>
+          <img src="./images/roasters.jpg" alt="coffee roasting machine" />
+        </a>
+      </div>
+    </div>
     <nav class="navbar">
       <div class="navbar--links">
-        <a href="#home" id="active"
+        <a href="./index.html" id="active"
           ><span class="material-icons-outlined"> cottage </span></a
         >
-        <a href="#grinders">
+        <a href="./grinders.html">
           <img
             src="./images/coffee-grinder-svgrepo-com.svg"
             alt="coffee grinders"
