--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>CGD - Coffee Grind Databse</title>
+    <title>CGD - Coffee Grind Database</title>
     <link
       rel="stylesheet"
       href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
@@ -50,21 +50,21 @@
     </table>
     <div class="links">
       <div>
-        <a href="#grinders">
+        <a href="./grinders.html">
           <h2>Grinders</h2>
           <img src="./images/grinders.jpg" alt="coffee grinder" />
         </a>
-        <a href="#newrecipe">
+        <a href="./newRecipe.html">
           <h2>New Recipe</h2>
           <img src="./images/menu.jpg" alt="coffee menu" />
         </a>
       </div>
       <div>
-        <a href="#machines">
+        <a href="./machines.html">
           <h2>Machines</h2>
           <img src="./images/machines.jpg" alt="espresso machine" />
         </a>
-        <a href="#roasters">
+        <a href="./roasters.html">
           <h2>Roasters</h2>
           <img src="./images/roasters.jpg" alt="coffee roasting machine" />
         </a>
