--- a/public/newRecipe.html
+++ b/public/newRecipe.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>CGD - Coffee Grind Databse</title>
+    <title>CGD - Coffee Grind Database</title>
     <link
       rel="stylesheet"
       href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
