--- a/public/grinders.html
+++ b/public/grinders.html
@@ -31,12 +31,14 @@
       <h1>Coffee Grind Database</h1>
       <div></div>
     </div>
-    <p>Search recipes by grinder:</p>
-    <div id="searchArea">
-      <input type="text" id="searchBox" />
-      <button id="searchButton">
-        <span class="material-icons-outlined"> search </span>
-      </button>
+    <div class="searchArea">
+      <p>Search recipes by grinder:</p>
+      <div id="searchArea">
+        <input type="text" id="searchBox" />
+        <button id="searchButton">
+          <span class="material-icons-outlined"> search </span>
+        </button>
+      </div>
     </div>
     <table id="grinderTable"></table>
 
