--- a/public/grinders.html
+++ b/public/grinders.html
@@ -44,13 +44,11 @@
 
     <nav class="navbar">
       <div class="navbar--links">
-        <a href="#home" id="active"
+        <a href="./index.html"
           ><span class="material-icons-outlined"> cottage </span></a
         >
-        <a href="#grinders">
-          <img
-            src="./images/coffee-grinder-svgrepo-com.svg"
-            alt="coffee grinders"
+        <a href="./grinders.html" id="active">
+          <img src="./images/grinder-active.svg" alt="coffee grinders"
         /></a>
         <a href="#newrecipe">
           <img
@@ -59,10 +57,10 @@
             alt="add recipe button"
           />
         </a>
-        <a href="#machines">
+        <a href="./machines.html">
           <span class="material-icons-outlined"> coffee_maker </span></a
         >
-        <a href="#roasters"
+        <a href="./roasters.html"
           ><span class="material-icons-outlined"> storefront </span></a
         >
       </div>
