--- a/public/index.html
+++ b/public/index.html
@@ -87,10 +87,10 @@
             alt="add recipe button"
           />
         </a>
-        <a href="#machines">
+        <a href="./machines.html">
           <span class="material-icons-outlined"> coffee_maker </span></a
         >
-        <a href="#roasters"
+        <a href="./roasters.html"
           ><span class="material-icons-outlined"> storefront </span></a
         >
       </div>
