Add roaster search page

--- a/public/machines.html
+++ b/public/machines.html
@@ -32,7 +32,7 @@
       <div></div>
     </div>
     <div class="searchArea">
-      <p>Search recipes by grinder:</p>
+      <p>Search recipes by machine:</p>
       <div id="searchArea">
         <input type="text" id="searchBox" />
         <button id="searchButton">
@@ -40,7 +40,7 @@
         </button>
       </div>
     </div>
-    <table id="grinderTable"></table>
+    <table id="machineTable"></table>
 
     <nav class="navbar">
       <div class="navbar--links">
@@ -67,6 +67,6 @@
         >
       </div>
     </nav>
-    <script src="./js/grinders.js"></script>
+    <script src="./js/machines.js"></script>
   </body>
 </html>
