--- a/public/roasters.html
+++ b/public/roasters.html
@@ -32,7 +32,7 @@
       <div></div>
     </div>
     <div class="searchArea">
-      <p>Search recipes by grinder:</p>
+      <p>Search recipes by roaster:</p>
       <div id="searchArea">
         <input type="text" id="searchBox" />
         <button id="searchButton">
@@ -40,17 +40,15 @@
         </button>
       </div>
     </div>
-    <table id="grinderTable"></table>
+    <table id="roasterTable"></table>
 
     <nav class="navbar">
       <div class="navbar--links">
         <a href="./index.html"
           ><span class="material-icons-outlined"> cottage </span></a
         >
-        <a href="./grinders.html">
-          <img
-            src="./images/coffee-grinder-svgrepo-com.svg"
-            alt="coffee grinders"
+        <a href="./grinders.html" id="active">
+          <img src="./images/grinder-active.svg" alt="coffee grinders"
         /></a>
         <a href="#newrecipe">
           <img
@@ -62,11 +60,11 @@
         <a href="./machines.html">
           <span class="material-icons-outlined"> coffee_maker </span></a
         >
-        <a href="./roasters.html" id="active"
+        <a href="./roasters.html"
           ><span class="material-icons-outlined"> storefront </span></a
         >
       </div>
     </nav>
-    <script src="./js/grinders.js"></script>
+    <script src="./js/roasters.js"></script>
   </body>
 </html>
