--- a/public/machines.html
+++ b/public/machines.html
@@ -52,7 +52,7 @@
             src="./images/coffee-grinder-svgrepo-com.svg"
             alt="coffee grinders"
         /></a>
-        <a href="#newrecipe">
+        <a href="./newRecipe.html">
           <img
             id="newrecipe"
             src="./images/addRecipe.svg"
