--- a/public/index.html
+++ b/public/index.html
@@ -37,17 +37,6 @@
       <div></div>
     </div>
     <p>Welcome to the future of espresso 🔮</p>
-    <table id="allApiData">
-      <th>Username</th>
-      <th>Drink</th>
-      <th>Grinder</th>
-      <th>Grind Setting</th>
-      <th>Pre-infusion Time (s)</th>
-      <th>Extraction Time (s)</th>
-      <th>Tasting Notes</th>
-      <th>Roaster</th>
-      <th>Bean Title</th>
-    </table>
     <div class="links">
       <div>
         <a href="./grinders.html">
@@ -80,7 +69,7 @@
             src="./images/coffee-grinder-svgrepo-com.svg"
             alt="coffee grinders"
         /></a>
-        <a href="#newrecipe">
+        <a href="./newRecipe.html">
           <img
             id="newrecipe"
             src="./images/addRecipe.svg"
