--- a/public/roasters.html
+++ b/public/roasters.html
@@ -50,7 +50,7 @@
         <a href="./grinders.html" id="active">
           <img src="./images/grinder-active.svg" alt="coffee grinders"
         /></a>
-        <a href="#newrecipe">
+        <a href="./newRecipe.html">
           <img
             id="newrecipe"
             src="./images/addRecipe.svg"
